docs: create Swagger documentation for topup APIs
